--- a/skin/ratingwindow.css
+++ b/skin/ratingwindow.css
@@ -151,6 +151,7 @@ body {
 	padding-left: 3px;
 	vertical-align: middle;
 	width: 312px;
+	-webkit-user-select: text;
 }
 #wot-ratingwindow[status="disabled"] #wot-title-text:hover {
 	color: #3073c5;
