--- a/skin/include/warning.css
+++ b/skin/include/warning.css
@@ -46,12 +46,12 @@
 
 #wotcontainer {
     width: 420px ! important; /* fixed width */
-    margin: 0px auto 0 !important;
+    margin: 0 auto 0 !important;
     outline: 0 !important;
     padding: 0 0 17px !important;
     z-index: 2147483647 !important;
     text-align: center !important;
-    font-family: verdana !important;
+    font-family: "Verdana", sans-serif !important;
     border-bottom-left-radius: 16px;
     border-bottom-right-radius: 16px;
     border: #babbbb solid 1px;
@@ -63,14 +63,23 @@
 }
 
 .wotcontainer * {
-    line-height: 1 !important;
-    font-family: verdana !important;
+    line-height: normal !important;
+    font-family: "Verdana", sans-serif !important;
+    font-weight: normal !important;
+    cursor: default !important;
+    font-size: 10pt !important;
     letter-spacing: 0 !important;
     opacity: 1.0 !important;
     outline: 0 !important;
+    border: 0 !important;
     vertical-align: baseline !important;
     word-spacing: 0 !important;
     padding: 0 0 0 0 !important;
+    text-decoration: none !important;
+    background-color: transparent !important;
+    text-align: center !important;
+    margin: 0 !important;
+    color: #504f4f !important;
 }
 
 .wot-logo {
@@ -109,11 +118,11 @@
 }
 
 .wot-desc {
-    margin-top: 17px !important;
+    margin-top: 11px !important;
     width: 100% !important;
     font-size: 11pt !important;
     text-shadow: 1px 1px 1px #fff !important;
-    color: #504f4f !important;
+    color: black !important;
 }
 
 .wot-openscorecard-wrap {
@@ -121,6 +130,7 @@
     width: 100% !important;
 }
 
+#wotinfobutton,
 .wot-openscorecard {
     padding: 0.25em 0 0.3em 30px !important;
     font-size: 10pt !important;
@@ -152,13 +162,14 @@
     position: relative !important;
     margin-top: 1.2em !important;
     text-align: left !important;
-    font-size: 10pt !important;
 }
 
 .wot-comp-name {
     padding: 0 0 0.5em 1em !important;
     color: #4f4f4e !important;
     text-shadow: 2px 2px 2px #fff !important;
+    text-align: left !important;
+    font-size: 10pt !important;
 }
 
 .wot-comp-level {
@@ -168,6 +179,8 @@
     border-bottom-left-radius: 10px !important;
     color: #ffffff !important;
     box-shadow: 2px 2px 6px #b6b6b6 !important;
+    text-align: left !important;
+    font-size: 10pt !important;
 }
 
 /* Colors for reputation's levels */
