--- a/skin/include/warning.css
+++ b/skin/include/warning.css
@@ -1,6 +1,6 @@
 /*
 	warning.css
-	Copyright © 2009 - 2012  WOT Services Oy <info@mywot.com>
+	Copyright © 2009 - 2013  WOT Services Oy <info@mywot.com>
 
 	This file is part of WOT.
 
@@ -45,6 +45,7 @@
 }
 
 #wotcontainer {
+    position: static !important;
     width: 420px ! important; /* fixed width */
     margin: 0 auto 0 !important;
     outline: 0 !important;
@@ -60,9 +61,11 @@
     background-image: -webkit-linear-gradient(left, #bdbdbd 0%, #e0e0e0 15%, #f1f1f1 50%, #e0e0e0 85%, #bdbdbd 100%);
     cursor: default !important;
     color: #504f4f !important;
+    direction: ltr; /* fixes issue #64 */
 }
 
 .wotcontainer * {
+    position: static !important;
     line-height: normal !important;
     font-family: "Verdana", sans-serif !important;
     font-weight: normal !important;
@@ -80,6 +83,8 @@
     text-align: center !important;
     margin: 0 !important;
     color: #504f4f !important;
+    width: auto; /* fixes issue #64 */
+    float: none; /* fixes issue #64 */
 }
 
 .wot-logo {
@@ -181,6 +186,7 @@
     box-shadow: 2px 2px 6px #b6b6b6 !important;
     text-align: left !important;
     font-size: 10pt !important;
+    text-shadow: none !important;
 }
 
 /* Colors for reputation's levels */
