--- a/skin/ratingwindow.css
+++ b/skin/ratingwindow.css
@@ -1641,7 +1641,7 @@ input[type=checkbox].css-checkbox:checked + label.css-label {
 }
 
 #user-comment {
-    height: 126px;
+    height: 132px;  /* diff in Safari */
     width: 350px;
     /*margin-right: 10px;*/
     padding: 8px;
